signup backend api added

--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -16,6 +16,8 @@
                 <input type="text" id="full-name" name="full-name" placeholder="Enter Your Name">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Enter Your Email">
+                <label for="phone-number">Phone Number</label>
+                <input type="text" id="phone-number" name="phone-number" placeholder="Enter Your Phone Number">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter Your Password">
                 <label for="confirm-password">Confirm Password</label>
@@ -24,6 +26,7 @@
             </form>
         </section>
     </main>
-    <script src="js/signup.js" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+    <script src="../js/signup.js"></script>
 </body>
 </html>
