--- a/public/html/signup.html
+++ b/public/html/signup.html
@@ -25,6 +25,9 @@
                 <button type="submit" class="signup-btn">Submit</button>
             </form>
         </section>
+        <section>
+            <h2>Existing User - <a href="login.html">Click here</a></h2>
+        </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script src="../js/signup.js"></script>
